<resources>
    <string name="app_name">ProyectofinalApp</string>
    <string name="enter_email">Ingresar Email</string>

    <string name="enter_password">Ingresar Contraseña</string>
    <string name="bottom_navigation_menu_device_text">Device</string>
    <string name="bottom_navigation_menu_cloud_text">Cloud</string>
    <string name="bottom_navigation_menu_share_text">Share</string>
    <string name="bottom_navigation_menu_settings_text">Settings</string>
    <string name="login">LOGIN</string>
    <string name="remember_password">Recordar contraseña</string>
    <string name="btn_signIn">INGRESAR</string>
    <string name="I_forget_password">olvide mi contraseña</string>
    <string name="do_you_have_not_account">¿no tienes cuenta?</string>
    <string name="create_account">Crear una cuenta nueva</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="username">Nombre Usuario</string>
    <string name="btn_signUp">Registrarse</string>
    <string name="informacion">Por favor introduce tus valores coporales para personalizar tu plan y calcular tus objetivos diario de calorias</string>
    <string name="titulo">Tus valores corporales</string>
    <string name="edad">Edad</string>
    <string name="estatura">Estatura</string>
    <string name="peso_ideal">Peso deseado</string>
    <string name="peso_actual">Peso actual</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="ObjetivoCal">Tu objetivo de calorías</string>
    <string name="descripcionObetivos">Tu objetivo de calorías se calcula basándose en tu objetivo de peso y nunca será inferior a tu metabolismo basal</string>
    <string name="metaDiaria">Tu meta diaria de calorias es :</string>
    <string name="objetivoSemanal">Tu meta semanal de calorias es :</string>
    <string name="objetivoMensual">Tu meta mensual de calorias es :</string>
    <string name="anterior">Anterior</string>
    <string name="olvidarContraseña">Ingrese su correo, para reiniciar su contraseña</string>
    <string name="recuperar">Recuperar</string>
    <string name="cancelar">Cancelar</string>
    <string name="buscar">Buscar en la base de datos</string>
</resources>
