<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="352dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:text="@string/olvidarContraseña"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/EmailSingUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="372dp"
        android:layout_height="90dp"
        android:layout_marginBottom="72dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btnrecuperar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="6dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btnrecuperar"
        android:layout_width="368dp"
        android:layout_height="43dp"
        android:layout_gravity="bottom"

        android:layout_marginBottom="44dp"
        android:background="@color/colorAccent"
        android:text="@string/recuperar"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="20dp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/btncancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btncancelar"
        android:layout_width="368dp"
        android:layout_height="43dp"
        android:layout_gravity="bottom"

        android:layout_marginBottom="120dp"
        android:background="?attr/colorError"
        android:text="@string/cancelar"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="20dp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>