<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:text="@string/titulo"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:text="@string/informacion"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="136dp"
                    android:layout_height="44dp"
                    android:layout_weight="1"
                    android:text="Genero" />

                <Spinner
                    android:id="@+id/spnGenero"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textEdad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:ems="10">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/inputEdad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edad"
                    android:inputType="number"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textEstatura"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/inputEstaura"
                    android:layout_height="wrap_content"
                    android:hint="@string/estatura"
                    android:inputType="numberDecimal"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textPesoActual"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/inputPesoAc"
                    android:layout_height="wrap_content"
                    android:hint="@string/peso_actual"
                    android:inputType="numberDecimal"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="122dp"
                    android:layout_height="44dp"
                    android:text="Nivel de actividad" />

                <Spinner
                    android:id="@+id/spnActividad"
                    android:layout_width="match_parent"
                    android:layout_height="44dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="122dp"
                    android:layout_height="44dp"
                    android:text="Objetivo Deseado" />

                <Spinner
                    android:id="@+id/spnObjetivo"
                    android:layout_width="match_parent"
                    android:layout_height="44dp" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textPesoDeseado"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:ems="10">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:id="@+id/inputPesoDeseado"
                    android:hint="@string/peso_ideal"
                    android:inputType="numberDecimal"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSiguiente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/btnSiguiente"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>