<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="253dp"
        android:layout_height="37dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="Crea tu cuenta"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.205"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="290dp"
        android:layout_height="62dp"
        android:layout_marginBottom="12dp"
        android:text="Registra tu cuenta y obten acceso a todas las funciones gratuitas de nuestra app"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/UsernameSingUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/UsernameSingUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/EmailSingUp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/EmailSingUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/PasswordSingUp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/PasswordSingUp"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginBottom="60dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btnSignIn"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="368dp"
        android:layout_height="45dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="80dp"

        android:background="@color/colorAccent"
        android:text="@string/btn_signUp"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="20dp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

</android.support.constraint.ConstraintLayout>